--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 
     "icons": [
         {
-            "src": "img/favicon.png",
+            "src": "img/cadastro.png",
             "sizes": "512x512",
             "type": "image/png"
         }
